--- a/src/client/app/components/sidebar/sidebar.html
+++ b/src/client/app/components/sidebar/sidebar.html
@@ -74,5 +74,12 @@
         </ul>
       </li>
     </ul>
+    <a href="https://github.com/humpback/humpback-web" target="_blank" class="bottom-logo flex-display">
+      <img src="./../../../static/images/logo.png" alt="">
+      <div>
+        <p>Humpback</p>
+        <p>©2016-2017</p>
+      </div>
+    </a>
   </section>
 </aside>
