--- a/src/client/app/components/sidebar/sidebar.css
+++ b/src/client/app/components/sidebar/sidebar.css
@@ -7,3 +7,23 @@
   background: #1e282c;
   border-left-color: #00a65a;
 }
+
+.bottom-logo {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 10px 5px;
+  background: #222d32;
+  align-items: center;
+  color: white;
+}
+
+.bottom-logo > img {
+  width: 40px;
+  height: 40px;
+}
+
+.bottom-logo p {
+  white-space: nowrap;
+  margin: 0;
+}
