improve eventservice, remove app.config.ts

--- a/src/client/app/components/sidebar/sidebar.css
+++ b/src/client/app/components/sidebar/sidebar.css
@@ -8,6 +8,10 @@
   border-left-color: #00a65a;
 }
 
+.sidebar-menu {
+  margin-bottom: 65px;
+}
+
 .bottom-logo {
   position: absolute;
   bottom: 0;
