fix logo in mini sidebar's bug

--- a/src/client/app/components/modal/modal.css
+++ b/src/client/app/components/modal/modal.css
@@ -6,8 +6,21 @@
   background: rgba(0, 0, 0, 0.6);
 }
 
+.modal-dialog {
+  height: calc(100% - 60px);
+}
+
+.modal-content {
+  max-height: 100%;
+}
+
 .modal-header {
   border-bottom-color: #e5e5e5;
+}
+
+.modal-body {
+  max-height: calc(100vh - 181px);
+  overflow-y: auto;
 }
 
 .modal-footer {
