--- a/src/client/app/components/sidebar/sidebar.html
+++ b/src/client/app/components/sidebar/sidebar.html
@@ -76,7 +76,7 @@
     </ul>
     <a href="https://github.com/humpback/humpback-web" target="_blank" class="bottom-logo flex-display">
       <img src="./../../../static/images/logo.png" alt="">
-      <div>
+      <div class="text-panel">
         <p>Humpback</p>
         <p>©2016-2017</p>
       </div>
