--- a/src/client/app/components/sidebar/sidebar.css
+++ b/src/client/app/components/sidebar/sidebar.css
@@ -16,7 +16,7 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  padding: 10px 5px;
+  padding: 10px 2.5px;
   background: #222d32;
   align-items: center;
   color: white;
@@ -25,6 +25,11 @@
 .bottom-logo > img {
   width: 40px;
   height: 40px;
+  margin-right: 0;
+}
+
+.bottom-logo > .text-panel {
+  margin-left: 10px;
 }
 
 .bottom-logo p {
