--- a/src/client/static/css/globalLoading.css
+++ b/src/client/static/css/globalLoading.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100%;
     z-index: 1990;
-    background-color: rgba(0, 0, 0, .7);
+    background-color: rgba(0, 0, 0, .1);
     display: none;
 }
 
@@ -16,7 +16,7 @@
     width: 70px;
     height: 70px;
     position: relative;
-    top: calc(50% - 50px);
+    top: calc(50% - 35px);
 }
 
 .sk-circle > p.loadingText {
@@ -41,7 +41,7 @@
     margin: 0 auto;
     width: 15%;
     height: 15%;
-    background-color: white;
+    background-color: darkslategray;
     border-radius: 100%;
     -webkit-animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
     animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
@@ -173,7 +173,6 @@
         -webkit-transform: scale(0);
         transform: scale(0);
     }
-
     40% {
         -webkit-transform: scale(1);
         transform: scale(1);
@@ -185,7 +184,6 @@
         -webkit-transform: scale(0);
         transform: scale(0);
     }
-
     40% {
         -webkit-transform: scale(1);
         transform: scale(1);
