--- a/src/client/static/css/preloader.css
+++ b/src/client/static/css/preloader.css
@@ -2,7 +2,6 @@
     0% {
         transform: rotate(0deg);
     }
-
     100% {
         transform: rotate(360deg);
     }
@@ -12,7 +11,6 @@
     0% {
         -moz-transform: rotate(0deg);
     }
-
     100% {
         -moz-transform: rotate(360deg);
     }
@@ -22,7 +20,6 @@
     0% {
         transform: rotate(0deg);
     }
-
     100% {
         transform: rotate(360deg);
     }
@@ -30,44 +27,47 @@
 
 @keyframes blink {
     0% {
-        text-shadow: rgb(255,255,255) 0 0 0;
+        text-shadow: rgb(255, 255, 255) 0 0 0;
     }
-
     50% {
         text-shadow: #2f323b 0 0 19px;
     }
-
     100% {
-        text-shadow: rgb(255,255,255) 0 0 0;
+        text-shadow: rgb(255, 255, 255) 0 0 0;
     }
 }
 
 @-webkit-keyframes blink {
     0% {
-        text-shadow: rgb(255,255,255) 0 0 0;
+        text-shadow: rgb(255, 255, 255) 0 0 0;
     }
-
     50% {
         text-shadow: #2f323b 0 0 19px;
     }
-
     100% {
-        text-shadow: rgb(255,255,255) 0 0 0;
+        text-shadow: rgb(255, 255, 255) 0 0 0;
     }
 }
 
 @-moz-keyframes blink {
     0% {
-        text-shadow: rgb(255,255,255) 0 0 0;
+        text-shadow: rgb(255, 255, 255) 0 0 0;
     }
-
     50% {
         text-shadow: #2f323b 0 0 19px;
     }
-
     100% {
-        text-shadow: rgb(255,255,255) 0 0 0;
+        text-shadow: rgb(255, 255, 255) 0 0 0;
     }
+}
+
+humpback-app:empty + .preloader {
+    opacity: 1;
+    z-index: 1000;
+}
+
+humpback-app:empty + .preloader>div {
+    display: block;
 }
 
 .preloader {
@@ -76,21 +76,23 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1000;
-    background-color: #2f323b;
+    z-index: -1;
+    background-color: #ecf0f5;
+    opacity: 0;
+    transition: opacity .8s ease-in-out;
 }
 
 .preloader > div {
-    display: block;
+    display: none;
     position: relative;
     left: 50%;
     top: 50%;
-    width: 150px;
-    height: 150px;
-    margin: -75px 0 0 -75px;
+    width: 100px;
+    height: 100px;
+    margin: -50px 0 0 -50px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #e85656;
+    border-top-color: darkturquoise;
     transform: translate3d(0, 0, 0);
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
@@ -133,7 +135,7 @@
     bottom: 5px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #209e91;
+    border-top-color: yellowgreen;
     -webkit-animation: spin 3s linear infinite;
     animation: spin 3s linear infinite;
 }
@@ -147,7 +149,7 @@
     bottom: 15px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #dfb81c;
+    border-top-color: black;
     -webkit-animation: spin 1.5s linear infinite;
     animation: spin 1.5s linear infinite;
 }
