improve header component

--- a/src/client/app/components/header/header.css
+++ b/src/client/app/components/header/header.css
@@ -2,6 +2,12 @@
   border: none;
 }
 
+.navbar-nav > .user-menu .user-image {
+  width: 40px;
+  height: 40px;
+  margin-top: -10px;
+}
+
 .user-footer {
   border: 1px solid lightgray;
 }
@@ -12,5 +18,10 @@
   }
   .main-header .navbar {
     margin-left: 0;
+  }
+  .navbar-nav > .user-menu .user-image {
+    width: 25px;
+    height: 25px;
+    margin-top: -8px;
   }
 }
