添加对container日志的设置

--- a/src/client/app/pages/group/server/container-clone/container-clone.css
+++ b/src/client/app/pages/group/server/container-clone/container-clone.css
@@ -25,3 +25,11 @@
   min-width: unset;
   flex: unset;
 }
+
+.box-body .box-second-title{
+  margin-bottom: 10px;
+}
+
+.box-body .equal-fields{
+  margin-bottom: 10px;
+}
