完成service的detail页面

--- a/src/client/app/pages/group/server/server-detail/server-detail.css
+++ b/src/client/app/pages/group/server/server-detail/server-detail.css
@@ -3,6 +3,10 @@
   flex-wrap: wrap;
 }
 
+.panel.box .box-header{
+  box-shadow: 0px 5px 10px lightgrey;
+}
+
 .btn-panel .btn-group {
   margin-right: initial;
 }
