更新上传文件

--- a/src/client/app/pages/group/server/container-detail/container-detail.css
+++ b/src/client/app/pages/group/server/container-detail/container-detail.css
@@ -54,3 +54,21 @@ li.custom-list::before {
   margin-right: 5px;
   align-self: flex-start;
 }
+
+.nav-tabs-custom > .nav-tabs.nav-stacked > li.active {
+  border-top: none;
+  border-left: 3px solid #3c8dbc;
+  border-right: 1px solid white;
+  border-top: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
+}
+
+.nav-tabs-custom > .nav-tabs.nav-stacked > li {
+  margin-right: 0px;
+}
+
+.nav-tabs-custom>.nav-tabs>li {
+  border-top: 3px solid transparent;
+  margin-bottom: -2px;
+  margin-right: 5px;
+}
