improve service detail and service operate

--- a/src/client/app/pages/group/server/container-list/container-list.css
+++ b/src/client/app/pages/group/server/container-list/container-list.css
@@ -110,6 +110,13 @@ td.operate {
   vertical-align: middle;
 }
 
+.empty-input {
+  width: 1px;
+  border: none;
+  position: fixed;
+  top: -10px;
+}
+
 @media(max-width:1024px) {
   th.status, td.status {
     width: auto;
@@ -128,3 +135,4 @@ td.operate {
     display: none;
   }
 }
+
