--- a/src/client/app/pages/cluster/container-info/container-info.css
+++ b/src/client/app/pages/cluster/container-info/container-info.css
@@ -121,3 +121,8 @@ p.title {
   background: rgb(255, 255, 255);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
+
+.basic-value{
+  max-width: 400px;
+  word-wrap: break-word;
+}
