--- a/src/client/app/components/header/header.html
+++ b/src/client/app/components/header/header.html
@@ -1,6 +1,6 @@
 <header class="main-header">
   <a [routerLink]="['/']" class="logo">
-    <span class="logo-mini"><b>HB</b></span>
+    <span class="logo-mini"><b>H</b></span>
     <span class="logo-lg"><b>Humpback</b></span>
   </a>
   <nav class="navbar navbar-static-top">
